--- a/ProductBundleRecommendation/static/style.css
+++ b/ProductBundleRecommendation/static/style.css
@@ -1,4 +1,6 @@
 body {
-    font-family: 'Roboto', sans-serif;
-    
+    font-family: 'Roboto', sans-serif;  
+}
+.nobull {
+    list-style-type: none;
 }
