--- a/Recommendation/templates/Recommendation/index.html
+++ b/Recommendation/templates/Recommendation/index.html
@@ -30,21 +30,21 @@
         </nav>
     </div>
 
-    <div class="jumbotron pb-0 pt-4">
+    <div class="jumbotron pb-3 pt-4">
         <div class="container">
             <h2 class="display-4">Instacart Market Basket Analysis</h2>
             <p class="text-secondary">Instacart is a same-day grocery delivery service that can save yourself that trip to the market.</p>
             <hr class="mt-4">
 
             <div class="row mt-5">
-                <div class="col-5 ">
+                <div class="col-4 mr-5">
                     <p class="alert alert-primary mb-3"><span class="ml-4">Total No. of Orders:</span> <strong class="ml-5 pl-5">3.2 Millions</strong></p>
                     <p class="alert alert-primary mb-3"><span class="ml-4">Total No. of Users:</span> <strong class="ml-5 pl-5"> 206,209</strong></p>
                     <p class="alert alert-primary mb-3"><span class="ml-4">Total No. of Products:</span> <strong class="ml-5 pl-4"> 49,688</strong></p>
                     <p class="alert alert-primary mb-3"><span class="ml-4">Total No. of Rules Generated:</span> <strong class="ml-3 pl-1"> 15,709</strong></p>
                 </div>
-                <div class="col-7 shadow-lg p-3 mb-5 bg-white rounded">
-                    <p>Search for any products and we will provide the best recommendation for you.</p>
+                <div class="col-7 box-shadow">
+                    <p class="mt-2 pl-2">Search for any products and we will provide the best recommendation for you.</p>
                     <hr>
                     <form method="GET" autocomplete="off" action="{% url 'productsearch' %}">
                          <div class="form-group">
@@ -58,7 +58,7 @@
                             {% endif %}
                            <datalist id="datalist"></datalist>
                         </div>
-                        <button class="btn btn-info my-2 my-sm-0" type="submit">Search</button>
+                        <button type="submit" class="btn btn-sm btn-outline-success mt-2"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Add to basket</button>
                         
                     </form>
                 </div>
@@ -68,51 +68,46 @@
     <div class="container">
         <div class="row">
             <div class="col-7">
-                <h2>Basket</h2>
-
-                <ul>
-                {% for item in basket %}
-                    <li>{{ item }}</li>
-                {% endfor %}
-                </ul> 
-                <form method="post">
-                    <button type="submit" class="btn btn-primary">Reset basket</button>
-                </form>
+               
+                <div class="box-shadow">
+                     <h4 class="ml-3">Recommendations</h4>
+                     <hr>
+                    <form method="GET" action="{% url 'productsearch' %}">
+                        <ul class="nobull">
+                        {% for item in recommendations %}
+                            <li>
+                                <input type="checkbox" id="item-{{ item }}" name="product_name" value="{{ item }}" />
+                                <label for="items">{{ item }}</label>
+                            </li>
+                        {% endfor %}
+                        </ul>
+                        {% if recommendations %}
+                            <button type="submit" class="btn btn-lg btn-outline-success mt-2"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Add to basket</button>
+                        {% endif %}
+                    </form>
+                </div>
                 <hr>
-                <h2>Recommendations</h2>
 
-                <form method="post">
-                    <ul class="nobull">
-                    {% for item in recommendations %}
-                        <li>
-                            <input type="checkbox" id="item-{{ item }}" name="items" value="{{ item }}" />
-                            <label for="items">{{ item }}</label>
-                        </li>
-                    {% endfor %}
-                    </ul>
-                    {% if recommendations %}
+                <div class="box-shadow mb-5">
+                    <h4 class="ml-3">Product Available</h4>
+                    <hr>
+                    <form method="GET" action="{% url 'productsearch' %}">
+                        <ul class="nobull">
+                        {% for item in items %}
+                            <li>
+                                <input type="checkbox" id="item-{{ item }}" name="product_name" value="{{ item }}" />
+                                <label for="items">{{ item }}</label>
+                            </li>
+                        {% endfor %}
+                        <hr>
                         <button type="submit" class="btn btn-lg btn-outline-success mt-2"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Add to basket</button>
-                    {% endif %}
-                </form>
-                <hr>
-
-                <h2>Product Available</h2>
-
-                <form method="post">
-                    <ul class="nobull">
-                    {% for item in items %}
-                        <li>
-                            <input type="checkbox" id="item-{{ item }}" name="items" value="{{ item }}" />
-                            <label for="items">{{ item }}</label>
-                        </li>
-                    {% endfor %}
-                    <button type="submit" class="btn btn-lg btn-outline-success mt-2"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Add to basket</button>
-                    </ul>
-                </form>
+                        </ul>
+                    </form>
+                </div>
             </div>
 
             <div class="col-5">
-                Top Products Bundles
+                <h4>Top Products Bundles</h4>
                 <hr>
                 <table class="table">
                 <thead class="thead-dark">
