modal created for user registration

--- a/ProductBundleRecommendation/static/style.css
+++ b/ProductBundleRecommendation/static/style.css
@@ -5,6 +5,10 @@ body {
     list-style-type: none;
 }
 
+.pointer{
+    cursor: pointer;
+}
+
 .box-shadow {
     padding: 10px;
     margin-bottom: 20px;
