--- a/Recommendation/templates/Recommendation/index.html
+++ b/Recommendation/templates/Recommendation/index.html
@@ -8,7 +8,7 @@
     <!--font-->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <!--bootstrap4 cdn-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!--custom css-->
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <!--fontawesome-->
@@ -19,14 +19,25 @@
     <div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="{% url 'homepage' %}"><img src="https://d2guulkeunn7d8.cloudfront.net/assets/beetstrap/brand/logo@3x-c01b12eeb889d8665611740b281d76fa1cf88d06bcbd8a50dbcae6baecdbe9da.png" height=45 width=130></a>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link pr-3" href="#">Register</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link pl-3" href="#">Log In</a>
-                </li>
-            </ul>
+            
+            {% if user.is_authenticated %}
+                <ul class="navbar-nav ml-auto">
+                        <p class="text-white pt-2 pr-3">Logged in as <strong>{{ user.username }}</strong></p>
+
+                    <li class="nav-item">
+                        <a class="nav-link pr-3" href="{% url 'logout' %}">Logout <i class="fa fa-user-plus pl-1" aria-hidden="true"></i></a>
+                    </li>
+                </ul>
+            {% else %}
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link pr-3 pointer" data-toggle="modal" data-target="#Modal-user">Register <i class="fa fa-user-plus pl-1" aria-hidden="true"></i></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link pl-3" href="{% url 'login' %}">Log In <i class="fa fa-sign-in pl-1" aria-hidden="true"></i> </a>
+                    </li>
+                </ul>
+            {% endif %}
         </nav>
     </div>
 
@@ -65,6 +76,7 @@
             </div>
         </div>
     </div>
+    
     <div class="container">
         <div class="row">
             <div class="col-7">
@@ -84,7 +96,7 @@
                         {% if recommendations %}
                             <button type="submit" class="btn btn-lg btn-outline-success mt-2"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Add to basket</button>
                         {% else %}
-                            <p class="alert alert-warning text-center">No Recommendations</p>
+                            <p class="alert alert-warning text-center">No Recommendation</p>
                         {% endif %}
                     </form>
                 </div>
@@ -131,7 +143,61 @@
             </div>
         </div>
     </div>
+ 
+
+
+<!-- Modal -->
+<div class="modal fade mt-5 pt-2" id="Modal-user">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header  bg-dark text-white">
+        <h5 class="modal-title " id="exampleModalLabel">Register with us</h5>
+        <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <form method="POST" action="{% url 'register' %}">
+      {% csrf_token %}
+        <div class="modal-body">
+            <div class="row form-group">
+                <div class="col-6">
+                    <label>Firstname:</label>
+                    <input type="text" class="form-control" placeholder="Enter Firstname" name="firstname">
+                </div>
+                <div class="col-6">
+                    <label>Lastname:</label>
+                    <input type="text" class="form-control" placeholder="Enter Lastname" name="lastname">
+                </div>
+            </div>
+            <div class="form-group">
+            <label>Username:</label>
+            <input type="text" class="form-control" placeholder="Enter Username" name="username">
+            </div>
+             <div class="form-group">
+            <label>Email:</label>
+            <input type="email" class="form-control" placeholder="Enter Email" name="email">
+            </div>
+            <div class="form-group">
+            <label>Password:</label>
+            <input type="password" class="form-control" placeholder="Enter Password" name="password">
+            </div>
+            <div class="form-group">
+            <label>Password Confirmation:</label>
+            <input type="password" class="form-control" placeholder="Enter Password Again" name="re-password">
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-success">Submit</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+    <!--bootstrap js-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap.native/3.0.0/bootstrap-native.min.js"></script>
     <!-- custom js-->
     <script src="{% static 'app.js' %}"></script>
+   
 </body>
 </html>
