--- a/account/templates/account/partial_user_registration.html
+++ b/account/templates/account/partial_user_registration.html
@@ -1,10 +1,10 @@
+{% load crispy_forms_tags %}
 <div class="modal-header  bg-dark text-white">
-    <h5 class="modal-title ml-auto">Register with us</h5>
+    <h5 class="modal-title ml-auto">Register With Us.</h5>
     <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
-
 <form method="POST" action="{% url 'register' %}" id="form">
 {% csrf_token %}
 <div class="modal-body">
@@ -37,7 +37,18 @@
     <label>Password Confirmation:</label>
     <input type="password" class="form-control" placeholder="Enter Password Again" name="re-password">
     </div> {% endcomment %}
-    {{ form.as_p }}
+    <div class="row">
+        <div class="col-6">
+            {{ form.first_name|as_crispy_field }}
+        </div>
+        <div class="col-6">
+            {{ form.last_name|as_crispy_field }}
+        </div>
+    </div>
+    {% comment %} {{ form.username|as_crispy_field }} {% endcomment %}
+    {{ form.email|as_crispy_field }}
+    {{ form.password1|as_crispy_field }}
+    {{ form.password2|as_crispy_field }}
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
