--- a/Recommendation/templates/Recommendation/index.html
+++ b/Recommendation/templates/Recommendation/index.html
@@ -37,7 +37,7 @@
                         <a class="nav-link pr-3 pointer register-modal">Register <i class="fa fa-user-plus pl-1" aria-hidden="true"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link pl-3" href="{% url 'login' %}">Log In <i class="fa fa-sign-in pl-1" aria-hidden="true"></i> </a>
+                        <a class="nav-link pl-3 pointer login-modal">Log In <i class="fa fa-sign-in pl-1" aria-hidden="true"></i> </a>
                     </li>
                 </ul>
             {% endif %}
