--- a/account/templates/account/partial_user_registration.html
+++ b/account/templates/account/partial_user_registration.html
@@ -8,35 +8,6 @@
 <form method="POST" action="{% url 'register' %}" id="form">
 {% csrf_token %}
 <div class="modal-body">
-    {% comment %} <div class="row form-group">
-        <div class="col-6">
-            <label>Firstname:</label>
-            <input type="text" class="form-control" placeholder="Enter Firstname" name="firstname">
-        </div>
-        <div class="col-6">
-            <label>Lastname:</label>
-            <input type="text" class="form-control" placeholder="Enter Lastname" name="lastname">
-        </div>
-    </div>
-    <div class="form-group">
-    <label>Username:</label>
-    <input type="text" class="form-control" placeholder="Enter Username" name="username">
-    {%if error %}
-        <small class="text-danger"><i class="fa fa-exclamation-circle"></i> {{ error }}</small>
-    {% endif %}
-    </div>
-        <div class="form-group">
-    <label>Email:</label>
-    <input type="email" class="form-control" placeholder="Enter Email" name="email">
-    </div>
-    <div class="form-group">
-    <label>Password:</label>
-    <input type="password" class="form-control" placeholder="Enter Password" name="password">
-    </div>
-    <div class="form-group">
-    <label>Password Confirmation:</label>
-    <input type="password" class="form-control" placeholder="Enter Password Again" name="re-password">
-    </div> {% endcomment %}
     <div class="row">
         <div class="col-6">
             {{ form.first_name|as_crispy_field }}
@@ -45,13 +16,12 @@
             {{ form.last_name|as_crispy_field }}
         </div>
     </div>
-    {% comment %} {{ form.username|as_crispy_field }} {% endcomment %}
     {{ form.email|as_crispy_field }}
     {{ form.password1|as_crispy_field }}
     {{ form.password2|as_crispy_field }}
 </div>
 <div class="modal-footer">
     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-    <button type="submit" class="btn btn-success">Submit</button>
+    <button type="submit" class="btn btn-success">Register</button>
 </div>
 </form>
