--- a/ProductBundleRecommendation/static/style.css
+++ b/ProductBundleRecommendation/static/style.css
@@ -32,11 +32,49 @@ body {
 }
 
 .cart {
+    position: sticky;
+    top: 83%;
+    right: 5%;
     border-radius: 121px 121px 121px 121px;
--moz-border-radius: 121px 121px 121px 121px;
--webkit-border-radius: 121px 121px 121px 121px;
-border: 0px none #000000;
+    -moz-border-radius: 121px 121px 121px 121px;
+    -webkit-border-radius: 121px 121px 121px 121px;
+    border: 0px none #000000;
     background: rgb(2,0,36);
     background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(11,9,121,0.8670021657193645) 42%, rgba(0,212,255,1) 100%);
 } 
- 
+
+.cart-count {
+    position: absolute;
+    top: -6px;
+    right: -7px;
+    height: 28px;
+    width: 28px;
+    background: #e94a35;
+    background: var(--cd-color-5);
+    color: #fff;
+    color: var(--cd-color-3);
+    font-size: 1.1333em;
+    padding-top:1px;
+    color: white;
+    background:red;
+    font-weight: 700;
+    border-radius: 80%;
+    text-indent: 0;
+    transition: -webkit-transform .2s .5s;
+    transition: transform .2s .5s;
+    transition: transform .2s .5s,-webkit-transform .2s .5s;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.jumbo-image {
+   
+    background-image: url("https://thumbs.dreamstime.com/b/healthy-food-background-studio-photo-different-fruits-vegetables-old-wooden-table-high-resolution-product-68278471.jpg");
+    border-radius:0px;
+    background-size: contain;
+    
+    
+}
+
+/* img link: https://thumbs.dreamstime.com/b/healthy-food-background-studio-photo-different-fruits-vegetables-old-wooden-table-high-resolution-product-68278471.jpg */
+
