--- a/Recommendation/templates/Recommendation/index.html
+++ b/Recommendation/templates/Recommendation/index.html
@@ -44,19 +44,37 @@
             </div>
         </nav>
     </div>
- <a class="sticky-top float-right p-4 m-3 pointer cart"><img src="https://s3.amazonaws.com/nuggetcomfort/cart_icon.png" width="55px"></a>
-    <div class="jumbotron pb-3 pt-4">
+ <a class="float-right p-4 mr-5 pointer cart"><img src="https://s3.amazonaws.com/nuggetcomfort/cart_icon.png" width="55px">
+    <div class="cart-count text-center">07</div>
+ </a>
+    <div class="jumbotron pb-3 pt-4 jumbo-image">
         <div class="container">
             <h2 class="display-4">Instacart Market Basket Analysis</h2>
-            <p class="text-secondary">Instacart is a same-day grocery delivery service that can save yourself that trip to the market.</p>
-            <hr class="mt-4">
-
+            <p class="text-white">Instacart is a same-day grocery delivery service that can save yourself that trip to the market.</p>
+            <hr class="mt-4 text-white">
             <div class="row mt-5">
                 <div class="col-4 mr-5">
-                    <p class="alert alert-primary mb-3"><span class="ml-4">Total No. of Orders:</span> <strong class="ml-5 pl-5">3.2 Millions</strong></p>
-                    <p class="alert alert-primary mb-3"><span class="ml-4">Total No. of Users:</span> <strong class="ml-5 pl-5"> 206,209</strong></p>
-                    <p class="alert alert-primary mb-3"><span class="ml-4">Total No. of Products:</span> <strong class="ml-5 pl-4"> 49,688</strong></p>
-                    <p class="alert alert-primary mb-3"><span class="ml-4">Total No. of Rules Generated:</span> <strong class="ml-3 pl-1"> 15,709</strong></p>
+                    <div class="row alert alert-primary mb-3">
+                        <div class="col-6">Total No. of Orders:</div>
+                        <div class="col-6 text-right"><strong>3.2 Millions</strong></div>
+                    </div>
+
+                     <div class="row alert alert-primary mb-3">
+                        <div class="col-6">Total No. of Users:</div>
+                        <div class="col-6 text-right"><strong>206,209</strong></div>
+                    </div>
+
+                     <div class="row alert alert-primary mb-3">
+                        <div class="col-8">Total No. of Products:</div>
+                        <div class="col-4 text-right"><strong>49,688</strong></div>
+                    </div>
+
+                    <div class="row alert alert-primary mb-3">
+                        <div class="col-9 text-left">Total No. of Rules Generated:</div>
+                        <div class="col-3 text-right"><strong>15,709</strong></div>
+                    </div>
+                   
+                    
                 </div>
                 <div class="col-7 box-shadow">
                     <p class="mt-2 pl-2">Search for any products and we will provide the best recommendation for you.</p>
@@ -149,15 +167,16 @@
     </div>
  
 
- 
-<!-- Modal -->
-<div class="modal fade mt-5 pt-2" id="Modal-user">
-  <div class="modal-dialog">
-    <div class="modal-content">
-        <!--modal will be displayed here-->
+    
+    <!-- Modal -->
+    <div class="modal fade mt-5 pt-2" id="Modal-user">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <!--modal will be displayed here-->
+        </div>
     </div>
-  </div>
-</div>
+    </div>
+
     <!--bootstrap js-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap.native/3.0.0/bootstrap-native.min.js"></script>
     <!-- custom js-->
