--- a/Recommendation/templates/Recommendation/index.html
+++ b/Recommendation/templates/Recommendation/index.html
@@ -27,7 +27,7 @@
                         
 
                         <li class="nav-item">
-                        <small class="text-white">Logged in as <strong class="username">{{ user.first_name }}  {{user.last_name }}</strong></small>
+                        <small class="text-white">Welcome, <strong class="username">{{ user.first_name }}  {{user.last_name }}</strong></small>
                             <a class="nav-link pl-5 text-right" href="{% url 'logout' %}">Logout <i class="fa fa-sign-out pl-1" aria-hidden="true"></i></a>
                         </li>
                     </ul>
@@ -53,7 +53,7 @@
             <p class="text-white">Instacart is a same-day grocery delivery service that can save yourself that trip to the market.</p>
             <hr class="mt-4 text-white">
             <div class="row mt-5">
-                <div class="col-4 mr-5">
+                <div class="col-lg-4 col-md-12 col-sm-12 mr-5">
                     <div class="row alert alert-primary mb-3">
                         <div class="col-6">Total No. of Orders:</div>
                         <div class="col-6 text-right"><strong>3.2 Millions</strong></div>
@@ -76,7 +76,7 @@
                    
                     
                 </div>
-                <div class="col-7 box-shadow">
+                <div class="col-lg-7 col-md-12 box-shadow">
                     <p class="mt-2 pl-2">Search for any products and we will provide the best recommendation for you.</p>
                     <hr>
                     <form method="GET" autocomplete="off" action="{% url 'productsearch' %}">
@@ -101,7 +101,7 @@
     
     <div class="container">
         <div class="row">
-            <div class="col-7">
+            <div class="col-lg-7 col-md-12 col-sm-12">
                
                 <div class="box-shadow">
                      <h4 class="ml-3">Recommendations</h4>
@@ -142,7 +142,7 @@
                 </div>
             </div>
 
-            <div class="col-5">
+            <div class="col-lg-5 col-sm-12">
                 <h4>Top Products Bundles</h4>
                 <hr>
                 <table class="table">
