--- a/ProductBundleRecommendation/static/style.css
+++ b/ProductBundleRecommendation/static/style.css
@@ -1,3 +1,14 @@
+
+#nav {
+    position: sticky;
+    top: 0;
+    width: 100%;
+    display: block;
+    transition: top 0.3s;
+    z-index: 5;
+  }
+  
+
 .navbar-dark .navbar-nav .nav-link {
     color: #f8f9fa;
 }
@@ -43,6 +54,7 @@ body {
     background: rgb(2,0,36);
     background: radial-gradient(circle, rgba(2,0,36,1) 0%, rgba(11,9,121,0.8670021657193645) 42%, rgba(0,212,255,1) 100%);
     opacity:0.9;
+    transition: 0.5s;
 } 
 
 .cart:hover {
@@ -74,8 +86,54 @@ body {
     background-image: url("https://thumbs.dreamstime.com/b/healthy-food-background-studio-photo-different-fruits-vegetables-old-wooden-table-high-resolution-product-68278471.jpg");
     border-radius:0px;
     background-size: contain;
-    
+}
+.cart-popup {
+    display:none;
+    position: fixed;
+    bottom:7.5%;
+    right: 8.5%;
+    background-color:#f8f9fa;
+    z-index : 7;
+    width:400px;
+    height:400px;
+    border-radius: 10px 10px 10px 10px;
+}
+
+.cart-popup-block-display {
+    display:block;
+}
+
+.cart-popup .cart-popup-header{
+    background-color: #343a40;
+    color: white;
+    border-radius:10px 10px 0px 0px;
+}
+
+
+.fa-angle-down:hover{
+    transform: scale(1.2, 1.2)
+}
+
+
+.footer {
+    position: fixed;
+    width: 400px;
+    bottom:7.5%;
     
 }
 
+.checkout-btn {
+    border-radius: 0px 0px 10px 10px;
+}
+
+.cart-body {
+    float:left;
+    width:400px;
+    overflow-y: auto;
+    height: 299px;
+ }
+
+ .fa-times-circle:hover{
+    transform: scale(1.3, 1.3)
+}
 /* img link: https://thumbs.dreamstime.com/b/healthy-food-background-studio-photo-different-fruits-vegetables-old-wooden-table-high-resolution-product-68278471.jpg */
